app/assets/stylesheets/components/_showcase.scss
.my-showcase {
  height: 100vh;
  padding-top: 50px;
  text-align: left;
  align-items: center;


  p {
    line-height: 10px;
    font-size: 20px;
  }
}

.showcase-cards {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 16px;
  align-content: center;
  padding-top: 30px;

  p {
    font-size: 16px;
    line-height: 20px;
  }
}

.card-showcase {
  width: 300px;
  padding-left: 25px;

  img {
    border-radius: 8px;
    width: 300px;
    height: 200px;
    object-fit: cover;
  }

  h3 {
    margin-top: 15px;
    font-size: 22px;
    font-weight: bolder;
  }
}

.center-this {
  width: 90%;
  margin: 0 auto;
}

